# MLOps-House-Price-Prediction

./: .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yaml  engineer.yaml  invoke.txt  main.py  pyproject.toml  requirements.txt  tasks.py
.github/: README.md
.github/workflows/: ci.yml
configs/: model_config.yaml  preprocess_config.yaml
deployment/kubernetes/: README.md  model-deploy.yaml  streamlit-deploy.yaml
deployment/kubernetes/KinD/: README.md
deployment/kubernetes/installations/: README.md
deployment/kubernetes/kubectl/: README.md
deployment/mlflow/: docker-compose.yaml
mlruns/models/house_price_model/: meta.yaml
notebooks/: 01_data_preprocessing.ipynb  02_eda.ipynb  03_feature_engineering.ipynb  04_model_training.ipynb
src/api/: README.md  inference.py  main.py  requirements.txt  schemas.py
src/data/: README.md  cleaning.py  cli.py  config.py  io.py  outliers.py  processor.py  schema.py
src/features/: README.md  builders.py  cli.py  config.py  processor.py
src/models/: README.md  builders.py  cli.py  config.py  processor.py
streamlit_app/: Dockerfile  README.md  app.py  requirements.txt
tests/: conftest.py
tests/data/: README.md  test_cleaning.py  test_io.py  test_outliers.py  test_processor_integration.py  test_schema.py
tests/features/: README.md  conftest.py  test_builders_features.py  test_builders_preprocessor.py  test_cli.py  test_processor_integration.py
tests/models/: README.md  conftest.py  test_builders_models.py  test_cli_models.py  test_config_training.py  test_processor_training_integration.py
(+3 files in other folders)
