[project]
name = "mlops-house-price-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "category-encoders>=2.8.1",
    "fastapi>=0.118.0",
    "invoke>=2.2.0",
    "ipykernel>=6.30.1",
    "joblib>=1.5.2",
    "matplotlib>=3.10.6",
    "mlflow>=3.4.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.9",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "ruff>=0.13.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "uvicorn>=0.37.0",
    "xgboost>=3.0.5",
]
